--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install Dependencies
         run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
       - name: Vite Environment
-        run: npm run dev
+        run: npm run build
       - name: Generate key
         run: php artisan key:generate
       - name: Directory Permissions
