--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@types/ziggy-js": "^1.3.2",
         "@vitejs/plugin-vue": "^4.0.0",
         "@vue/server-renderer": "^3.2.31",
+        "@vueform/multiselect": "^2.5.8",
         "autoprefixer": "^10.4.12",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
