--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.7",
-        "maatwebsite/excel": "^3.1",
+        "rap2hpoutre/fast-excel": "^5.1",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
