--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "private": true,
     "scripts": {
+        "lint": "eslint --ext .js,.ts,.vue --fix resources",
         "dev": "vite",
         "build": "vite build && vite build --ssr"
     },
@@ -9,17 +10,29 @@
         "@tailwindcss/forms": "^0.5.3",
         "@types/lodash": "^4.14.191",
         "@types/ziggy-js": "^1.3.2",
+        "@typescript-eslint/eslint-plugin": "^5.56.0",
+        "@typescript-eslint/parser": "^5.56.0",
         "@vitejs/plugin-vue": "^4.0.0",
         "@vue/server-renderer": "^3.2.31",
         "@vueform/multiselect": "^2.5.8",
         "autoprefixer": "^10.4.12",
         "axios": "^1.1.2",
+        "eslint": "^8.36.0",
+        "eslint-config-prettier": "^8.8.0",
+        "eslint-config-standard-with-typescript": "^34.0.1",
+        "eslint-import-resolver-alias": "^1.1.2",
+        "eslint-import-resolver-typescript": "^3.5.3",
+        "eslint-plugin-import": "^2.27.5",
+        "eslint-plugin-n": "^15.6.1",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-promise": "^6.1.1",
+        "eslint-plugin-vue": "^9.9.0",
         "laravel-vite-plugin": "^0.7.2",
         "lodash": "^4.17.19",
         "postcss": "^8.4.18",
         "tailwindcss": "^3.2.1",
         "ts-loader": "^9.4.2",
-        "typescript": "^4.9.5",
+        "typescript": "^5.0.2",
         "vite": "^4.0.0",
         "vue": "^3.2.41",
         "ziggy-js": "^1.5.0"
