--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
         "@typescript-eslint/no-explicit-any": "off",
         "@typescript-eslint/no-var-requires": "off",
         "vue/multi-word-component-names": "off",
+        "vue/prop-name-casing": "off",
         "no-undef": "off",
         "prettier/prettier": [
             "error",
