--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,11 +6,11 @@
         "plugin:prettier/recommended"
     ],
     "rules": {
-        "@typescript-eslint/no-explicit-any": "off",
-        "@typescript-eslint/no-var-requires": "off",
+        // "@typescript-eslint/no-explicit-any": "off",
+        // "@typescript-eslint/no-var-requires": "off",
+        // "vue/prop-name-casing": "off",
+        // "no-undef": "off",
         "vue/multi-word-component-names": "off",
-        "vue/prop-name-casing": "off",
-        "no-undef": "off",
         "prettier/prettier": [
             "error",
             {
