--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "scripts": {
         "lint": "eslint --ext .js,.ts,.vue --fix resources",
         "dev": "vite",
-        "build": "vite build && vite build --ssr"
+        "build": "tsc && vite build"
     },
     "devDependencies": {
         "@inertiajs/vue3": "^1.0.0",
@@ -36,5 +36,8 @@
         "vite": "^4.0.0",
         "vue": "^3.2.41",
         "ziggy-js": "^1.5.0"
+    },
+    "dependencies": {
+        "@babel/core": "^7.22.5"
     }
 }
