--- a/package.json
+++ b/package.json
@@ -5,18 +5,28 @@
         "dev": "vite",
         "build": "tsc && vite build"
     },
-    "devDependencies": {
+    "dependencies": {
         "@inertiajs/vue3": "^1.0.0",
         "@tailwindcss/forms": "^0.5.3",
         "@types/lodash": "^4.14.191",
         "@types/ziggy-js": "^1.3.2",
-        "@typescript-eslint/eslint-plugin": "^5.56.0",
-        "@typescript-eslint/parser": "^5.56.0",
         "@vitejs/plugin-vue": "^4.0.0",
         "@vue/server-renderer": "^3.2.31",
         "@vueform/multiselect": "^2.5.8",
         "autoprefixer": "^10.4.12",
         "axios": "^1.1.2",
+        "laravel-vite-plugin": "^0.7.2",
+        "lodash": "^4.17.19",
+        "postcss": "^8.4.18",
+        "tailwindcss": "^3.2.1",
+        "vite": "^4.0.0",
+        "vue": "^3.2.41",
+        "ziggy-js": "^1.5.0"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.22.5",
+        "@typescript-eslint/eslint-plugin": "^5.56.0",
+        "@typescript-eslint/parser": "^5.56.0",
         "eslint": "^8.36.0",
         "eslint-config-prettier": "^8.8.0",
         "eslint-config-standard-with-typescript": "^34.0.1",
@@ -27,17 +37,7 @@
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-promise": "^6.1.1",
         "eslint-plugin-vue": "^9.9.0",
-        "laravel-vite-plugin": "^0.7.2",
-        "lodash": "^4.17.19",
-        "postcss": "^8.4.18",
-        "tailwindcss": "^3.2.1",
         "ts-loader": "^9.4.2",
-        "typescript": "^5.0.2",
-        "vite": "^4.0.0",
-        "vue": "^3.2.41",
-        "ziggy-js": "^1.5.0"
-    },
-    "dependencies": {
-        "@babel/core": "^7.22.5"
+        "typescript": "^5.1.3"
     }
 }
