--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "scripts": {
         "lint": "eslint --ext .js,.ts,.vue --fix resources",
         "dev": "vite",
-        "build": "tsc && vite build"
+        "build": "tsc && vite build && vite build --ssr"
     },
     "dependencies": {
         "@inertiajs/vue3": "^1.0.0",
@@ -15,12 +15,14 @@
         "@vueform/multiselect": "^2.5.8",
         "autoprefixer": "^10.4.12",
         "axios": "^1.1.2",
+        "chart.js": "^4.3.0",
         "laravel-vite-plugin": "^0.7.2",
         "lodash": "^4.17.19",
         "postcss": "^8.4.18",
         "tailwindcss": "^3.2.1",
         "vite": "^4.0.0",
         "vue": "^3.2.41",
+        "vue-chartjs": "^5.2.0",
         "ziggy-js": "^1.5.0"
     },
     "devDependencies": {
