--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -17,6 +17,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Copy .env
         run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+      - name: Clear services and packages
+        run: php artisan clear
       - name: Update Composer
         run: composer update
       - name: Install Dependencies
