--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dependencies": {
         "@inertiajs/vue3": "^1.0.0",
         "@tailwindcss/forms": "^0.5.3",
+        "@types/dom-to-image": "^2.6.4",
         "@types/lodash": "^4.14.191",
         "@types/ziggy-js": "^1.3.2",
         "@vitejs/plugin-vue": "^4.0.0",
@@ -16,6 +17,7 @@
         "autoprefixer": "^10.4.12",
         "axios": "^1.1.2",
         "chart.js": "^4.3.0",
+        "dom-to-image": "^2.6.0",
         "laravel-vite-plugin": "^0.7.2",
         "lodash": "^4.17.19",
         "postcss": "^8.4.18",
